--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -1,4 +1,3 @@
-# .github/workflows/update-changelog.yaml
 name: "Update Changelog"
 
 on:
@@ -13,17 +12,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.release.target_commitish }}
+          ref: master
 
       - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
         with:
-          latest-version: ${{ github.event.release.tag_name }}
+          latest-version: ${{ github.event.release.name }}
           release-notes: ${{ github.event.release.body }}
 
       - name: Commit updated CHANGELOG
         uses: stefanzweifel/git-auto-commit-action@v4.15.4
         with:
-          branch: ${{ github.event.release.target_commitish }}
+          branch: master
           commit_message: Update CHANGELOG
           file_pattern: CHANGELOG.md
