--- a/composer.json
+++ b/composer.json
@@ -22,21 +22,21 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "abraham/twitteroauth": "^6.0",
-        "spatie/laravel-package-tools": "^1.16"
+        "php": "^8.2",
+        "abraham/twitteroauth": "^8.0",
+        "spatie/laravel-package-tools": "^1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.0",
-        "orchestra/testbench": "^8.0",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
+        "nunomaduro/collision": "^8.0",
+        "larastan/larastan": "^3.0",
+        "orchestra/testbench": "^10.0",
+        "pestphp/pest": "^4.0",
+        "pestphp/pest-plugin-laravel": "^4.0",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^10",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpunit/phpunit": "^12",
         "phpcompatibility/php-compatibility": "*"
     },
     "autoload": {
