feat: add SharePayload and ShareResult value objects for social sharing functionality
- Introduced SharePayload class to encapsulate sharing data including message, link, image URL, video URL, media IDs, provider options, and metadata.
- Added methods to retrieve individual properties and check for core content presence.
- Created ShareResult class to represent the result of a share operation, including provider, ID, URL, and raw response data.
- Implemented conversion of ShareResult to an array format for easier handling.

test: add feature tests for social sharing functionality

- Developed tests for sharing models to various social platforms (Facebook, LinkedIn, Instagram, Twitter) using the CanShareSocially trait.
- Validated the behavior of sharing methods, including handling of invalid inputs and ensuring correct API interactions.
- Added tests for the new SharePayload and ShareResult classes to ensure proper functionality and data handling.

test: implement unit tests for ApiException and Provider enums

- Created unit tests for ApiException to verify exception handling based on API responses.
- Added tests for Provider enum to ensure correct resolution of provider aliases and handling of unsupported providers.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-build
+/vendor
+/.phpunit.cache
+/.phpunit.result.cache
+/build
+/coverage
+/.rector
+/rector.cache
+/.idea
+/.vscode
 composer.lock
-docs
-vendor
-coverage
-.phpunit.result.cache
-.idea/
-.vscode
