Refactor media upload handling across providers
- Replaced `mb_strlen` with `strlen` for size calculations in BaseProvider.
- Updated LinkedInProvider to use `substr` instead of `mb_substr` for chunk extraction.
- Modified TwitterProvider to handle media uploads with base64 encoding for multibyte content.
- Enhanced error handling in TwitterProvider for upload failures and added fallback mechanisms.
- Improved test coverage for LinkedIn and Twitter providers, including handling of multibyte media uploads and invalid upload instructions.
- Adjusted assertions in tests to reflect changes in media upload endpoints and response handling.

--- a/composer.json
+++ b/composer.json
@@ -58,8 +58,14 @@
         "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/pest --coverage --min=95",
         "format": "vendor/bin/pint",
-        "rector:default": "vendor/bin/rector process --config rector.default.php --ansi",
-        "rector": "vendor/bin/rector process --config rector.php --ansi"
+        "rector": "vendor/bin/rector process --config rector.php --ansi",
+        "check": [
+            "@rector",
+            "@format",
+            "@analyse",
+            "@test",
+            "@test-coverage"
+        ]
     },
     "config": {
         "sort-packages": true,
