feat: add Instagram publish retry logic and update configuration options

--- a/.testing.env.example
+++ b/.testing.env.example
@@ -19,6 +19,8 @@ SOCIALIZE_FACEBOOK_ACCESS_TOKEN=
 
 SOCIALIZE_INSTAGRAM_BASE_URL=https://graph.facebook.com
 SOCIALIZE_INSTAGRAM_GRAPH_VERSION=v25.0
+SOCIALIZE_INSTAGRAM_PUBLISH_RETRY_ATTEMPTS=20
+SOCIALIZE_INSTAGRAM_PUBLISH_RETRY_SLEEP_SECONDS=3
 SOCIALIZE_INSTAGRAM_IG_ID=
 SOCIALIZE_INSTAGRAM_ACCESS_TOKEN=
 
