--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": "^8.4",
         "illuminate/contracts": "^11.0|^12.0",
+        "illuminate/filesystem": "^11.0|^12.0",
         "illuminate/http": "^11.0|^12.0",
         "illuminate/support": "^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.16"
