Refactor FluentShare and SharePayload for improved media source handling and validation
- Simplified media source management in FluentShare by removing redundant checks and directly appending sources.
- Enhanced SharePayload to normalize and validate media IDs and sources, ensuring they meet expected formats.
- Added tests to cover edge cases for media source normalization and validation in SharePayload.
- Introduced error handling for unsupported media fields in various providers, ensuring clearer exceptions.
- Updated existing tests to reflect changes in media source handling and validation logic.

--- a/.testing.env.example
+++ b/.testing.env.example
@@ -26,6 +26,7 @@ SOCIALIZE_INSTAGRAM_ACCESS_TOKEN=
 
 SOCIALIZE_TWITTER_BASE_URL=https://api.x.com
 SOCIALIZE_TWITTER_BEARER_TOKEN=
+SOCIALIZE_TWITTER_MEDIA_PROCESSING_POLL_ATTEMPTS=15
 
 SOCIALIZE_LINKEDIN_BASE_URL=https://api.linkedin.com
 SOCIALIZE_LINKEDIN_AUTHOR=
